[FIX] theme_accorderie_canada: alignement offre auteur

--- a/theme_accorderie_canada/static/src/scss/custom.scss
+++ b/theme_accorderie_canada/static/src/scss/custom.scss
@@ -644,7 +644,7 @@ actualité
 .activite.btn {
   max-width: 100%;
   max-height: 160px;
-  padding: 5% 0;
+  padding: 1.5rem 0;
   overflow: hidden;
   text-align: left;
   white-space: normal;
